--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container shadow p-4 mb-5 mt-5 bg-white rounded">
   <button class="btn btn-primary mb-4" routerLink="login">Entrar</button>
+  <button class="btn btn-success mb-4" routerLink="cadastrar">Cadastre-Se</button>
 
 <div class="card mt-10">
+
   <div class="card-body">
     <h1>Bem Vindo! Para nós da Grow, crescer não é opção e sim o nosso Objetivo</h1>
   </div>
