ajuste no preenchimento da data de validade

--- a/src/app/components/produtos-criar/produtos-criar.component.html
+++ b/src/app/components/produtos-criar/produtos-criar.component.html
@@ -23,9 +23,10 @@
         name="dataValidade"
         mask="00/00/0000"
         [(ngModel)]="produto.dataValidade"
-
+        maxlength="10"
       />
     </div>
+
     <div class="mb-3">
       <label>Preço do Produto</label>
       <input
