alteração nos campos de data

--- a/src/app/components/cadastrar/cadastrar.component.html
+++ b/src/app/components/cadastrar/cadastrar.component.html
@@ -29,6 +29,7 @@
         <!-- Validação -->
 
 
+        <!-- colocar aqui o calendario de data nascimento -->
 
         <div class="form-group">
           <input
