--- a/src/app/components/produto-editar/produto-editar.component.html
+++ b/src/app/components/produto-editar/produto-editar.component.html
@@ -13,7 +13,7 @@
         [(ngModel)]="produto.nome"
       />
     </div>
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label>Data de validade Produto</label>
       <input
         type="text"
@@ -25,7 +25,7 @@
         [(ngModel)]="produto.dataValidade"
 
       />
-    </div>
+    </div> -->
     <div class="mb-3">
       <label>Preço do Produto</label>
       <input
@@ -51,6 +51,6 @@
       />
     </div>
   </form>
-  <button type="button" class="btn btn-primary button ml-4" (click)="atualizarProduto()">Atualizar</button>
+  <!-- <button type="button" class="btn btn-primary button ml-4" (click)="atualizarProduto()">Atualizar</button> -->
   <button type="button" class="btn btn-warning"(click)="cancelar()">Cancelar</button>
 </div>
