--- a/src/app/components/produtos-criar/produtos-criar.component.html
+++ b/src/app/components/produtos-criar/produtos-criar.component.html
@@ -13,7 +13,7 @@
         [(ngModel)]="produto.nome"
       />
     </div>
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label>Data de validade Produto</label>
       <input
         type="text"
@@ -25,9 +25,58 @@
         [(ngModel)]="produto.dataValidade"
         maxlength="10"
       />
-    </div>
+    </div> -->
 
-    <div class="mb-3">
+
+<div class="row">
+  <label>Data de Validade:</label>
+
+   <div class="col">
+        <label>Dia</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Coloque o dia de vencimento"
+          name="dataValidade"
+          mask="00"
+          [(ngModel)]="produto.dia"
+
+
+        />
+      </div>
+   <div class="col">
+        <label>Mes</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Coloque o dia de vencimento"
+          name="dataValidade"
+          mask="00"
+          [(ngModel)]="produto.mes"
+
+
+        />
+      </div>
+
+   <div class="col">
+        <label>Ano</label>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Coloque o dia de vencimento"
+          name="dataValidade"
+          mask="0000"
+          [(ngModel)]="produto.ano"
+
+
+        />
+      </div>
+</div>
+
+    <div class="mb-3 mt-3">
       <label>Preço do Produto</label>
       <input
         type="text"
